<resources>
    <string name="app_name">TransportManagementSystem</string>
    <string name="title_activity_navigation_drware">NavigationDrwareActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Easy to Access</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_transports">Transports</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_new_transport">New Transport</string>
    <string name="menu_employees">Employees</string>
    <string name="menu_trip_booking">Trip Booking</string>
    <string name="menu_pay_fare">Pay Fare</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_print_chalan">Print Chalan</string>
    <string name="menu_report">Report</string>
</resources>